-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.10.3
-
None
-
3
-
9223372036854775807
When run obdfilter-survey it would only do one test at a time. After some debugging I traced the issue to destroy_objects function. Here is the errors.
remote_shell localhost lctl --device 17 destroy 444 1
error: destroy: invalid objid '444'
destroy OST object <objid> [num [verbose]]
usage: destroy <num> objects, starting at objid <objid>
run <command> after connecting to device <devno>
--device <devno> <command [args ...]>
remote_shell localhost lctl --device 18 destroy 444 1
error: destroy: invalid objid '444'
destroy OST object <objid> [num [verbose]]
usage: destroy <num> objects, starting at objid <objid>
run <command> after connecting to device <devno>
--device <devno> <command [args ...]>
remote_shell localhost lctl --device 19 destroy 444 1
error: destroy: invalid objid '444'
destroy OST object <objid> [num [verbose]]
usage: destroy <num> objects, starting at objid <objid>
run <command> after connecting to device <devno>
--device <devno> <command [args ...]>
remote_shell localhost lctl --device 20 destroy 444 1
error: destroy: invalid objid '444'
destroy OST object <objid> [num [verbose]]
usage: destroy <num> objects, starting at objid <objid>
run <command> after connecting to device <devno>
--device <devno> <command [args ...]>
remote_shell localhost lctl --device 21 destroy 444 1
error: destroy: invalid objid '444'
destroy OST object <objid> [num [verbose]]
usage: destroy <num> objects, starting at objid <objid>
run <command> after connecting to device <devno>
--device <devno> <command [args ...]>
Any ideas what could be causing this?
- is related to
-
LU-10566 parallel-scale-nfsv4 test_metabench: mkdir: cannot create directory on Read-only file system
-
- Reopened
-